--- a/temperature.html
+++ b/temperature.html
@@ -8,7 +8,7 @@
 			var fahrenheit;		//華氏溫度變數
 			celsius = window.prompt("Please enter Celsius", "Enter here");	//攝氏溫度輸入視窗
 			
-			function celsiusToFahrenheit(temperature){
+			function celsiusToFahrenheit(temperature){	//攝氏轉華氏Function
 				return 1.8 * temperature + 32;
 			}
 			
